# tigris-bookmarks

./: Cargo.toml  README.md  manifest.json
src/: main.rs
src/actions/: mod.rs
src/bookmarks/: mod.rs
src/forms/: mod.rs
src/icons/: mod.rs
src/paths/: mod.rs
src/results/: mod.rs
