[package]
name = "bookmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
tigris-rs = { path = "/home/lighttigerxiv/projects/whiskers-apps/tigris-rs", features = [
    "extension",
] }
sniffer-rs = "1.1.2"
dirs = "5.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
regex = "1.11.1"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
image = "0.25.5"
open = "5.3.2"
